--- a/.env.development
+++ b/.env.development
@@ -1,3 +1,3 @@
 PORT = 5000
 
-DATABASE_URL = mongodb+srv://bono:E3j8rCNbQ4dLC0jG@cluster0.rbdq7.mongodb.net/?retryWrites=true&w=majority
+PATH = mongodb+srv://bono:E3j8rCNbQ4dLC0jG@cluster0.rbdq7.mongodb.net/?retryWrites=true&w=majority
